index: avoid layout shift, increase image size

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -141,8 +141,8 @@ body.index {
 
       .image-container {
         margin-top: 0;
-        height: 120%;
-        width: 60vw;
+        height: 74vh;
+        width: 70vw;
         display: flex;
         flex-direction: row;
         align-items: center;
